# flat_log

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg-configuration.json
src/: argument_parser.cpp  argument_parser.h  falt_log.cpp  flat_log.h  mapped_file.cpp  mapped_file.h  simd_support.cpp  simd_support.h
